--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 <body>
 <button id="fxbtn" >Select</button>
 <button id="clbtn" >Open</button>
-<button id="back" >Back</button>
+<button id="home" >Home</button>
 <input id="seldir" type="file" webkitdirectory style="display: none" />
-<div><ol id="listed-files"></ol></div>
+<div id="listed-files"></div>
 <script>
     require('./render.js');
 </script>
