load directory when selected

--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
 </head>
 
 <body>
-<button id="fxbtn" >Select</button>
-<button id="clbtn" >Open</button>
+<button id="fxbtn" >Select Directory</button>
 <button id="home" >Home</button>
 <input id="seldir" type="file" webkitdirectory style="display: none" />
 <div id="listed-files"></div>
