tag operations added

--- a/index.html
+++ b/index.html
@@ -17,9 +17,12 @@
             <button id="fxbtn" type="button" class="btn btn-info">Directory</button>
             <button id="home" type="button" class="btn btn-info"><i class="fa fa-home"></i> Home</button>
             <button id="back" type="button" class="btn btn-info">Back</button>
+        </div><br>
+        <div class="btn-group btn-group-lg" role="group">
+            <button id="createtag" type="button" class="btn btn-info">Create New Tag</button>
         </div>
         <input id="seldir" type="file" webkitdirectory style="display: none" />
-        <div id="quick-access">Recent Directories</div>
+        <div id="quick-access" >Recent Directories</div>
     </div>
     <div class="col" style="max-height:95vh; overflow-y: scroll">
         <div id="listed-files"></div>
