--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div id="quick-access" >Recent Directories</div>
     </div>
     <div class="col" style="max-height:95vh; overflow-y: scroll">
-        <div id="listed-files"></div>
+        <div id="listed-folders"></div><div id="listed-files"></div>
     </div>
 </div>
 </div>
