limited recent directory list

--- a/index.html
+++ b/index.html
@@ -22,7 +22,10 @@
             <button id="createtag" type="button" class="btn btn-info">Create New Tag</button>
         </div>
         <input id="seldir" type="file" webkitdirectory style="display: none" />
-        <div id="quick-access" >Recent Directories</div>
+        <div>Recent Directories</div>
+        <div id="quick-access"></div>
+        <div>Tags<br><br></div>
+        <div id="tags"></div>
     </div>
     <div class="col" style="max-height:95vh; overflow-y: scroll">
         <div id="listed-folders"></div><div id="listed-files"></div>
