delete tags and files

--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
             <button id="home" type="button" class="btn btn-info"><i class="fa fa-home"></i> Home</button>
             <button id="back" type="button" class="btn btn-info">Back</button>
         </div><br>
-        <div class="btn-group btn-group-lg" role="group">
+        <div class="btn-group btn-group-sm" role="group">
             <button id="createtag" type="button" class="btn btn-info">Create New Tag</button>
+            <button id="deletetag" type="button" class="btn btn-info">Delete Tag</button>
         </div>
         <input id="seldir" type="file" webkitdirectory style="display: none" />
         <div>Recent Directories</div>
