--- a/index.html
+++ b/index.html
@@ -17,16 +17,20 @@
             <button id="fxbtn" type="button" class="btn btn-info">Directory</button>
             <button id="home" type="button" class="btn btn-info"><i class="fa fa-home"></i> Home</button>
             <button id="back" type="button" class="btn btn-info">Back</button>
-        </div><br>
-        <div class="btn-group btn-group-sm" role="group">
-            <button id="createtag" type="button" class="btn btn-info">Create New Tag</button>
-            <button id="deletetag" type="button" class="btn btn-info">Delete Tag</button>
-        </div>
+        </div><br><br>
         <input id="seldir" type="file" webkitdirectory style="display: none" />
         <div>Recent Directories</div>
-        <div id="quick-access"></div>
-        <div>Tags<br><br></div>
-        <div id="tags"></div>
+        <div id="quick-access"></div><br>
+        <div>Tags<br></div>
+        <div id="tags"></div><br>
+        <div class="btn-group btn-group-sm" role="group">
+                <button id="createtag" type="button" class="btn btn-info">Create New Tag</button>
+                <button id="deletetag" type="button" class="btn btn-info">Delete Tag</button>
+        </div>
+        <div class="btn-group btn-group-sm" role="group">
+            <button id="tagmode" type="button" class="btn btn-primary">Mode</button>
+            <button id="fileList" type="button" class="btn btn-primary">Files</button>
+        </div>
     </div>
     <div class="col" style="max-height:95vh; overflow-y: scroll">
         <div id="listed-folders"></div><div id="listed-files"></div>
