binded prompts to parent window

--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
             <button id="back" type="button" class="btn btn-info">Back</button>
         </div><br><br>
         <input id="seldir" type="file" webkitdirectory style="display: none" />
-        <div>Recent Directories</div>
-        <div id="quick-access"></div><br>
+        
         <div>Tags<br></div>
         <div id="tags"></div><br>
         <div class="btn-group btn-group-sm" role="group">
@@ -29,7 +28,9 @@
         </div>
         <div class="btn-group btn-group-sm" role="group">
             <button id="tagmode" type="button" class="btn btn-primary">Mode</button>
-        </div>
+        </div><br><br>
+        <div>Recent Directories</div>
+        <div id="quick-access"></div><br>
     </div>
     <div class="col" style="max-height:95vh; overflow-y: scroll">
         <div id="listed-folders"></div><div id="listed-files"></div>
