file type icons added

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <title>UManager</title>
     <link rel="stylesheet" href="bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="bootstrap/dist/css/font-awesome.min.css">
-    <link rel="stylesheet" href="custom.css">
+    <link rel="stylesheet" href="css/custom.css">
+    <link rel="stylesheet" href="css/icons.css">
     
 </head>
 
