limit displayed tags

--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
         </div><br><br>
         <input id="seldir" type="file" webkitdirectory style="display: none" />
         
-        <div id="tags"></div>
+        <div id="tags"></div><br>
 
         <div id="tag-search">
-            <button id="dd-toggle" onclick="tagsearch.dropdownToggle()" class="btn btn-primary">Search Tags</button>
+            <button id="dd-toggle" onclick="tagsearch.dropdownToggle()" class="btn btn-primary">Search Tags <i class="fa fa-caret-down"></i></button>
             <div id="tagdropdown" class="dropdown-content">
               <input type="text" placeholder="Search Tag" id="searchbox" onkeyup="tagsearch.searchTags()">
               <div id=fulltaglist></div>
