--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <button id="dd-toggle" onclick="tagsearch.dropdownToggle()" class="btn btn-primary">Search Tags <i class="fa fa-caret-down"></i></button>
             <div id="tagdropdown" class="dropdown-content">
               <input type="text" placeholder="Search Tag" id="searchbox" onkeyup="tagsearch.searchTags()">
-              <div id=fulltaglist></div>
+              <div id=fulltaglist style="overflow-y:scroll;max-height:222px;"></div>
             </div>
         </div><br>
 
