moved scripts into layers

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
 <script src="render.js"></script>
 <script src="initial.js"></script>
-<script src="contextmenu.js"></script>
+<script src="view\contextmenu.js"></script>
 
 </body>
 </html>
